working out layout issues out

--- a/site/css/style.styl
+++ b/site/css/style.styl
@@ -10,8 +10,12 @@ body
 	hr
 		margin 60px 0
 
+.main
+	margin-top 80px
+
 .brand
 	font-family 'Michroma', sans-serif
+
 
 /* Main marketing message and sign up button */
 .jumbotron
@@ -47,42 +51,41 @@ body
 	z-index 9
 
 .carousel-control
-      height 80px
-      margin-top 0
-      font-size 120px
-      text-shadow 0 1px 1px rgba(0,0,0,.4)
-      background-color transparent
-      border 0
-      z-index 10
+	height 80px
+	margin-top 0
+	font-size 120px
+	text-shadow 0 1px 1px rgba(0,0,0,.4)
+	background-color transparent
+	border 0
+	z-index 10
+	top 23%
 
-.carousel .item {
-      height 300px
-    }
-.carousel img {
-      position absolute
-      top 0
-      left 0
-      min-width 100%
-      height 500px
-    }
+.carousel .item 
+	height 300px
 
-.carousel-caption {
-      background-color transparent
-      position static
-      max-width 850px
-      padding 0 20px
-      margin-top 110px
-    }
+.carousel img
+	position absolute
+	top 0
+	left 0
+	min-width 100%
+	height 500px
+
+
+.carousel-caption
+	background-color transparent
+	position static
+	max-width 850px
+	margin-top 110px
+
 .carousel-caption h1,
-.carousel-caption .lead {
-      margin 0
-      line-height 1.25
-      color #fff
-      text-shadow 0 1px 1px rgba(0,0,0,.4)
-    }
-.carousel-caption .btn {
-      margin-top 10px
-    }
+.carousel-caption .lead
+	margin 0
+	line-height 1.25
+	color #fff
+	text-shadow 0 1px 1px rgba(0,0,0,.4)
+
+.carousel-caption .btn
+	margin-top 10px
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
